feat: refactoring lunh algo with streams